--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,6 +18,9 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ "/colaboraciones" | relative_url }}">Colaboraciones</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contacto</a>
         </li>
       </ul>
